# offline-rl-d4rl

./: .gitignore  OFFLINE_RL_IMPLEMENTATION_GUIDE.md  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
ant/: __init__.py  dataset.py  env_config.py  evaluate.py  render.py  train.py
ant/configs/: bc.yaml  cql.yaml  iql.yaml
common/: __init__.py  bc.py  cql.py  dataset.py  evaluation.py  iql.py  logger.py  networks.py  render.py
configs/: bc_config.yaml  cql_config.yaml  iql_config.yaml
halfcheetah/: __init__.py  dataset.py  env_config.py  evaluate.py  render.py  train.py
halfcheetah/configs/: bc.yaml  cql.yaml  iql.yaml
hopper/: __init__.py  dataset.py  env_config.py  evaluate.py  render.py  train.py
hopper/configs/: bc.yaml  cql.yaml  iql.yaml
models/: __init__.py  bc.py  cql.py  iql.py
utils/: __init__.py  dataset.py
walker2d/: __init__.py  dataset.py  env_config.py  evaluate.py  render.py  train.py
walker2d/configs/: bc.yaml  cql.yaml  iql.yaml
