[project]
name = "offline-rl-d4rl"
version = "0.1.0"
description = "Reference implementation of CQL, IQL, and BC baselines for D4RL locomotion tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gym==0.23.1",
    "gymnasium>=0.28.0",
    "d4rl>=1.1",
    "mujoco-py>=2.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
]
